# cookiecutter-python

./: AGENTS.md  CLAUDE.md  README.md  cookiecutter.json
.github/: dependabot.yml
.github/workflows/: pre-commit-autoupdate.yml  tests.yml  zizmor.yml
hooks/: post_gen_project.py  pre_gen_project.py
test-final/python-project/: README.md
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: docs.yml  lint.yml  pre-commit-autoupdate.yml  release.yml  tests.yml  zizmor.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.__module_import}}/: __init__.py  _app.py
{{cookiecutter.project_slug}}/test/: test_init.py
{{cookiecutter.project_slug}}/{{cookiecutter.__module_import}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_slug}}/: __init__.py  __main__.py  _cli.py
