[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
license-files = ["LICENSE"]

{%- if cookiecutter.license == "Apache 2.0" %}
license = "Apache-2.0"
{%- elif cookiecutter.license == "AGPL v3" %}
license = "AGPL-3.0-or-later"
{%- elif cookiecutter.license == "Proprietary" %}
license = "LicenseRef-Proprietary-License"
{%- endif %}

authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
requires-python = ">=3.10"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
doc = [
    {%- if cookiecutter.documentation == "pdoc" -%}
    "pdoc"
    {%- endif -%}
]
test = ["pytest", "pytest-cov", "pytest-timeout", "pretend", "coverage[toml]"]
lint = [
    # NOTE: ruff is under active development, so we pin conservatively here
    # and let Dependabot periodically perform this update.
    "ruff ~= 0.12",
    "pyright ~= 1.1.407",
    "types-html5lib",
    "types-requests",
    "types-toml",
    {%- if cookiecutter.docstring_coverage %}
    "interrogate",
    {%- endif %}
]
dev = [
    {include-group = "doc"},
    {include-group = "test"},
    {include-group = "lint"},
]

{% if cookiecutter.entry_point -%}
[project.scripts]
"{{ cookiecutter.entry_point }}" = "{{ cookiecutter.__project_import }}._cli:main"
{%- endif %}

[project.urls]
Homepage = "https://pypi.org/project/{{ cookiecutter.project_slug }}"
Documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}/"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
Source = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = ["{{ cookiecutter.__project_src_path }}/_cli.py"]

[tool.pyright]
include = ["src", "test"]
exclude = []
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportGeneralTypeIssues = "error"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
include = ["src/**/*.py", "test/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
# D203 and D213 are incompatible with D211 and D212 respectively.
# COM812 and ISC001 can cause conflicts when using ruff as a formatter.
# See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
ignore = ["D203", "D213", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
{% if cookiecutter.entry_point -%}
"{{ cookiecutter.__project_src_path }}/_cli.py" = [
    "T201", # allow `print` in cli module
]
{%- endif %}
"test/**/*.py" = [
    "D",    # no docstrings in tests
    "S101", # asserts are expected in tests
]

{%- if cookiecutter.docstring_coverage %}
[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment, or the CLI (which is documented separately).
exclude = ["env", "test", "{{ cookiecutter.__project_src_path }}/_cli.py"]
ignore-semiprivate = true
fail-under = 100
{%- endif %}

[tool.uv.sources]
{{ cookiecutter.project_slug }} = { workspace = true }

{%- if cookiecutter.project_namespace_import %}
[tool.uv.build-backend]
module-name = "{{ cookiecutter.__project_import }}"
{%- endif %}
